# pystratos

./: .gitignore  LICENSE.md  README.md  pyproject.toml
docs/: requirements.txt
docs/source/: base.rst  conf.py  examples.rst  index.rst  pystratos.rst
pystratos/: __init__.py  ipfs.py  spfs.py
tests/: test_spfs.py
